...
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="MoviehiveApp" customModuleProvider="target">
            <connections>
                <outlet property="nowPlayingCollectionView" destination="znf-mL-Kf8" id="PKH-Px-oEC"/>
                <outlet property="pageControl" destination="Yat-zs-lfu" id="ZGa-TC-GzO"/>
                <outlet property="upcomingCollectionView" destination="tdf-ad-daE" id="52q-gX-8pB"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
