...
    var currentPage: Int = 0
    var totalPage: Int = 0
    
    func viewDidLoad() {
        view?.setTimer()
        view?.setSearchBar()
        view?.setTitle("Moviehive")
        view?.setUpSlider()
        view?.setUpUpcomingMovies()
    }
    
    func viewWillLoad() {
        view?.showLoadingView()
...
